--- a/config.ini
+++ b/config.ini
@@ -2,3 +2,4 @@ smtpAddress='199.168.191.130';
 email='contact@waltrump.com';
 password='tarzan567';
 imagePath='/tmp/';
+emailApiKey=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
