fix email config

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,4 @@
-smtpAddress='199.168.191.130';
-email='contact@waltrump.com';
-password='tarzan567';
+email='touchus@xmapledatalab.com';
 imagePath='/tmp/';
 emailApiKey=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
+emailAPIKeyProd=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
