--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,5 @@
-smtpAddress='199.168.191.130';
-email='contact@waltrump.com';
-password='tarzan567';
-imagePath='/tmp/';
+smtpAddress='smtp.gmail.com';
+email='touchus@xmapledatalab.com';
+password='xMaple123';
+apiKey='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';
+imagePath='/img/';
