--- a/config.ini
+++ b/config.ini
@@ -2,4 +2,4 @@ smtpAddress='smtp.gmail.com';
 email='touchus@xmapledatalab.com';
 password='xMaple123';
 apiKey='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';
-imagePath='/img/';
+imagePath='img/';
