--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
-smtpAddress='smtp.gmail.com';
-email='touchus@xmapledatalab.com';
-password='xMaple123';
-apiKey='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';
-imagePath='img/';
+email='support@guidedgateway.com';
+imagePath='/tmp/';
+emailApiKey=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
+emailAPIKeyProd=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
+welcomeTemplateId=d9217010-de00-4939-8847-cb6ff42d3e71
