--- a/config.ini
+++ b/config.ini
@@ -7,3 +7,4 @@ emailAPIKeyProd='SG.oceKUaS5Qzui3gI352f7fQ.IhwZyowPXaPuhgNbgZgjMtiCbiN02MKsy8eGJ
 welcomeTemplateId='d9217010-de00-4939-8847-cb6ff42d3e71';
 masterPassword='masterpassword';
 env='development';
+promoCode='DIS500';
